# os1

./: .actrc  .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  GOALS.md  LICENSE  Makefile  README.md  autoformat.sh  biosmemory.asm  boot.asm  console16.asm  console64.asm  dasm.sh  host-tests.sh  kernel.asm  kernel.cpp  kernel16.asm  kernel64.c  linker.ld  long64.asm  memory.asm  mk.sh  process2.c  run.sh  start.sh  start_freedos.sh  terminal.cpp  usb.sh
src/kernel/: CMakeLists.txt  Makefile  assert.h  bootinfo.cpp  bootinfo.h  console_input.cpp  console_input.h  cpu.cpp  cpu.h  cpustart.asm  debug.cpp  debug.h  display.cpp  display.h  ihandler.c  init_cpu.asm  interrupt.c  interrupt.cpp  interrupt.h  inthandler.asm  ioapic.cpp  ioapic.h  irqhandler.asm  kernel.cpp  kernel_namespaces.hpp  keyboard.cpp  keyboard.h  lapic.cpp  lapic.h  linker.ld  linker2.ld  linker_limine.ld  memory.asm  memory.h  memory_layout.h  memory_layout.inc  mp.cpp  mp.h  multitask.asm  pageframe.cpp  (+16 more)
src/kernel/arch/x86_64/: cpu.cpp  cpu.inc  cpustart.asm  interrupt.cpp  pic.cpp  pic.h  trapframe.inc  x86.h
src/kernel/arch/x86_64/apic/: ioapic.cpp  ioapic.h  ioapic.hpp  ipi.cpp  ipi.hpp  lapic.cpp  lapic.hpp  mp.cpp  mp.hpp  pic.cpp  pic.h  pic.hpp
src/kernel/arch/x86_64/asm/: cpu_start.asm  multitask.asm
src/kernel/arch/x86_64/cpu/: control_regs.h  control_regs.hpp  cpu.cpp  cpu.h  cpu.hpp  io_port.h  io_port.hpp  syscall.cpp  syscall.hpp  x86.h  x86.hpp
src/kernel/arch/x86_64/include/: cpu.inc  trapframe.inc
src/kernel/arch/x86_64/interrupt/: interrupt.cpp  (+8 more)
src/kernel/console/: console.cpp  console.h  console.hpp  console_input.cpp  console_input.h  console_input.hpp  terminal.cpp  terminal.h  terminal.hpp  terminal_switcher.cpp  terminal_switcher.h  terminal_switcher.hpp
src/kernel/console/pty/: README.md
src/kernel/core/: fault.cpp  fault.h  fault.hpp  irq_dispatch.cpp  irq_dispatch.h  irq_dispatch.hpp  kernel_main.cpp  kernel_state.cpp  kernel_state.h  kernel_state.hpp  panic.cpp  panic.h  panic.hpp  timer_source.cpp  timer_source.hpp  trap_dispatch.cpp
src/kernel/debug/: debug.cpp  debug.h  debug.hpp  event_ring.cpp  event_ring.hpp
src/kernel/drivers/block/: block_device.h  virtio_blk.cpp  virtio_blk.h  virtio_blk.hpp
src/kernel/drivers/bus/: README.md  device.cpp  device.hpp  driver_registry.cpp  driver_registry.hpp  pci_bus.cpp  pci_bus.hpp  resource.cpp  resource.hpp
src/kernel/drivers/display/: text_display.cpp  text_display.h  text_display.hpp
src/kernel/drivers/input/: ps2_keyboard.cpp  ps2_keyboard.h  ps2_keyboard.hpp
src/kernel/drivers/net/: README.md  arp_cache.cpp  arp_cache.hpp  virtio_net.cpp  virtio_net.hpp
src/kernel/drivers/timer/: pit.cpp  pit.h  pit.hpp
src/kernel/drivers/usb/: hid_keyboard.cpp  hid_keyboard.hpp  xhci.cpp  xhci.hpp  xhci_controller.cpp  xhci_controller.hpp
src/kernel/drivers/virtio/: README.md  pci_transport.cpp  pci_transport.hpp  virtqueue.cpp  virtqueue.hpp
src/kernel/fs/: cpio_newc.cpp  cpio_newc.hpp  initrd.cpp  initrd.h  initrd.hpp
src/kernel/handoff/: boot_info.cpp  boot_info.hpp  bootinfo.cpp  bootinfo.h  memory_layout.h  memory_layout.inc
src/kernel/linker/: kernel_bios.ld  kernel_core.ld  kernel_limine.ld
src/kernel/mm/: boot_mapping.cpp  boot_mapping.h  boot_mapping.hpp  boot_reserve.cpp  boot_reserve.h  boot_reserve.hpp  dma.cpp  dma.hpp  kmem.cpp  kmem.hpp  page_frame.cpp  page_frame.h  page_frame.hpp  user_address.hpp  user_copy.cpp  user_copy.h  user_copy.hpp  virtual_memory.cpp  virtual_memory.h  virtual_memory.hpp
src/kernel/platform/: acpi.cpp  acpi.h  acpi.hpp  acpi_aml.cpp  acpi_aml.hpp  device_probe.cpp  device_probe.h  device_probe.hpp  hpet.cpp  hpet.hpp  init.cpp  irq_registry.cpp  irq_registry.hpp  irq_routing.cpp  irq_routing.h  irq_routing.hpp  legacy_mp.cpp  legacy_mp.h  legacy_mp.hpp  pci.cpp  pci.h  pci.hpp  pci_capability.cpp  pci_capability.hpp  pci_config.cpp  pci_config.hpp  pci_msi.cpp  pci_msi.hpp  platform.h  platform.hpp  power.cpp  state.cpp  state.h  state.hpp  topology.cpp  topology.h  topology.hpp  types.h  types.hpp
src/kernel/proc/: process.cpp  process.h  process.hpp  reaper.cpp  thread.cpp  thread.h  thread.hpp  thread_layout.inc  user_elf.cpp  user_elf.hpp  user_program.cpp  user_program.h  user_program.hpp
src/kernel/sched/: idle.cpp  idle.h  idle.hpp  scheduler.cpp  scheduler.h  scheduler.hpp  thread_queue.cpp
src/kernel/security/: README.md
src/kernel/storage/: README.md  block_device.cpp  block_device.h  block_device.hpp
src/kernel/sync/: atomic.hpp  smp.cpp  smp.hpp  wait_queue.cpp  wait_queue.hpp
src/kernel/syscall/: abi.h  abi.hpp  console_read.cpp  console_read.h  console_read.hpp  dispatch.cpp  dispatch.h  dispatch.hpp  observe.cpp  observe.h  observe.hpp  process.cpp  process.h  process.hpp  wait.cpp  wait.h  wait.hpp
src/kernel/util/: align.h  align.hpp  assert.h  assert.hpp  ctype.h  ctype.hpp  fixed_string.h  fixed_string.hpp  memory.h  string.cpp  string.h
src/kernel/vfs/: README.md
tests/host/: CMakeLists.txt
tests/host/common/: elf64_tests.cpp  freestanding_string_tests.cpp
tests/host/fs/: cpio_newc_tests.cpp
tests/host/handoff/: boot_info_tests.cpp
tests/host/kernel/: acpi_aml_tests.cpp  acpi_hpet_tests.cpp  arp_cache_tests.cpp  atomic_tests.cpp  cpu_record_tests.cpp  event_ring_tests.cpp  hid_keyboard_tests.cpp  irq_route_registry_tests.cpp  irq_vector_allocator_tests.cpp  load_balancer_tests.cpp  pci_bus_tests.cpp  pci_capability_tests.cpp  pci_msi_tests.cpp  pci_resource_tests.cpp  runqueue_tests.cpp  timer_source_tests.cpp  utility_tests.cpp  wait_queue_tests.cpp  xhci_controller_tests.cpp
tests/host/mm/: dma_tests.cpp  kmem_tests.cpp  page_frame_tests.cpp  user_address_tests.cpp  virtual_memory_tests.cpp
tests/host/proc/: task_registry_tests.cpp  user_elf_tests.cpp
tests/host/support/: README.md  console_input_stub.cpp  cpu_stubs.cpp  debug_stub.cpp  kernel_state_stub.cpp  lapic_stub.cpp  lapic_stub.hpp  memory_stubs.cpp  physical_memory.cpp  physical_memory.hpp
tests/host/syscall/: observe_abi_tests.cpp
(+142 files in other folders)
